# open-orpheus

./: .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README_en.md  eslint.config.mjs  eslint.config.ts  forge.config.ts  forge.env.d.ts  nativemodules.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start_ui_module.ts  tsconfig.json  versions.json  vite.main.config.ts  vite.renderer.config.ts  vite.worklets.config.ts
.github/: release.yml
.github/workflows/: build.yml  ci.yml  flathub.yml  lint.yml  release.yml
docs/: CODE_OF_CONDUCT_en.md  CONTRIBUTING_en.md  README_en.md  RELEASE_CHECKLIST.md
gui/: eslint.config.js  package.json  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
gui/src/: app.d.ts  app.html
gui/src/lib/: types.ts
gui/src/lib/components/: IconButton.svelte  Lyrics.svelte
gui/src/lib/components/ui/field/: field-content.svelte  field-description.svelte  field-error.svelte  field-group.svelte  field-label.svelte  field-legend.svelte  field-separator.svelte  field-set.svelte  field-title.svelte  field.svelte
gui/src/lib/components/ui/input/: input.svelte
gui/src/lib/components/ui/label/: label.svelte
gui/src/lib/components/ui/radio-group/: radio-group-item.svelte  radio-group.svelte
gui/src/lib/components/ui/separator/: separator.svelte
gui/src/lib/components/ui/sheet/: sheet-content.svelte  sheet-description.svelte  sheet-footer.svelte  sheet-header.svelte  sheet-overlay.svelte  sheet-title.svelte  sheet.svelte
gui/src/lib/components/ui/sidebar/: sidebar-content.svelte  sidebar-group-action.svelte  sidebar-group-label.svelte  sidebar-input.svelte  sidebar-inset.svelte  sidebar-menu-action.svelte  sidebar-menu-badge.svelte  sidebar-menu-button.svelte  sidebar-menu-sub-button.svelte  sidebar-menu-sub.svelte  sidebar-menu.svelte  sidebar-provider.svelte  sidebar-rail.svelte  sidebar-separator.svelte  sidebar-trigger.svelte  sidebar.svelte
gui/src/lib/components/ui/skeleton/: skeleton.svelte
gui/src/lib/components/ui/tooltip/: tooltip-content.svelte  tooltip.svelte
gui/src/routes/: +layout.svelte  +page.svelte  Cache.svelte  LocalResources.svelte  Package.svelte  Tray.svelte  Window.svelte  manage.d.ts  types.ts
gui/src/routes/(transparent)/: +layout.svelte  override.css
gui/src/routes/(transparent)/desktop-lyrics/: +page.svelte
gui/src/routes/(transparent)/menu/: +page.svelte  MenuPanel.svelte  template.ts  types.ts
gui/src/routes/desktop-lyrics/: +page.svelte
gui/src/routes/desktop-lyrics-preview/: +page.svelte
gui/src/routes/package-download/: +page.svelte
modules/database/: package.json
modules/database/crates/@open-orpheus/database/: Cargo.toml
modules/database/crates/@open-orpheus/database/src/: lib.rs
modules/database/src/: Database.cts
modules/lifecycle/src/: index.ts
modules/ui/: README.md  package.json
modules/ui/crates/@open-orpheus/ui/: Cargo.toml
modules/ui/crates/@open-orpheus/ui/src/: app.rs  dynload.rs  export.rs  lib.rs  menu.rs  napi.rs  resource.rs  skin.rs  util.rs
modules/ui/crates/@open-orpheus/ui/src/app/: base64_loader.rs  fonts.rs  inner.rs  menu.rs  pack_loader.rs  request.rs  wrappers.rs
modules/ui/crates/@open-orpheus/ui/src/components/: menu.rs
modules/ui/crates/@open-orpheus/ui/src/components/menu/: draw.rs  popup.rs  shared.rs  types.rs  wayland.rs
modules/ui/crates/@open-orpheus/ui/src/export/: app.rs  font.rs  menu.rs
modules/ui/src/: App.cts  Menu.cts  index.cts  load.cts  module.cts
modules/window/: package.json
modules/window/crates/@open-orpheus/window/: Cargo.toml
modules/window/crates/@open-orpheus/window/src/: lib.rs  linux.rs  macos.rs  windows.rs
modules/window/crates/@open-orpheus/window/src/linux/: dynload.rs  wayland.rs  x11.rs
modules/window/crates/window/: Cargo.toml
modules/window/crates/window/src/: linux.rs
modules/window/crates/window/src/linux/: __wayland.rs  _wayland.rs  wayland.rs
modules/window/src/: index.cts
packaging/: electron-installer-common.d.ts  options.json  options.ts
packaging/flatpak/: electron-installer-flatpak.d.ts  metainfo.xml
packaging/rpm/: electron-installer-redhat.d.ts
patches/: electron-installer-redhat@3.4.0.patch
scripts/: README.md  _loader.ts  build-flatpak-builder.mts  build-modules.mts  build-srpm.mts  install-flatpak-scaffolding.mts  start_ui_module.ts
src/: CallDispatcher.ts  constants.ts  error.ts  main.ts  preload.ts  storage.ts  util.ts
src/main/: Pack.ts  audio.ts  audioStreamer.ts  cache.ts  channel.ts  cookie.ts  crypto.ts  database.ts  desktopLyrics.ts  device.ts  download.ts  error.ts  folders.ts  gui.ts  kv.ts  lifecycle.ts  lyrics.ts  menu.ts  ntpk.ts  orpheus.ts  pack.ts  request.ts  shortcuts.ts  storage.ts  tray.ts  ui.ts  update.ts  util.ts  window.ts
src/main/audio/: streamer.ts
src/main/cache/: LyricCahceManager.ts  PlayCacheManager.ts  URLCacheManager.ts
src/main/calls/: app.ts  browser.ts  download.ts  index.ts  musiclibrary.ts  network.ts  os.ts  storage.ts  trayicon.ts  winhelper.ts
src/main/menu/: skin.ts  types.ts  windows.ts
src/main/packs/: Pack.ts  SkinPack.ts  WebPack.ts
src/main/windows/: desktop-lyrics.ts  manage.ts  package-download.ts
src/preload/: Player.ts  audioplayer.ts  channel.ts  desktopLyrics.ts  miniprogram.ts
src/preload/calls/: app.ts  audioplayer.ts  os.ts  player.ts  update.ts
src/windows/: desktop-lyrics-preview.ts  desktop-lyrics.ts  manage.ts  menu.ts  package-download.ts
src/worklets/: audio-data.ts
