[package]
name = "ui"
version = "0.1.0"
description = "Native UI module for Open Orpheus"
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
egui = { version = "0.33.3", default-features = false }
egui-wgpu = { version = "0.33.3", features = ["winit"] }
egui-winit = "0.33.3"
egui_extras = { version = "0.33.3", features = ["svg", "image"] }
font-kit = { version = "0.14.3", features = ["source-fontconfig-dlopen"] }
image = { version = "0.25.10", features = ["jpeg", "png"] }
libuv-sys2 = "~1.52.1"
neon = { version = "1.1", features = ["serde", "sys"] }
oneshot = { version = "0.2.1", features = ["async"] }
rand = "0.10.0"
resvg = "0.45.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
smol = "2.0.2"
winit = "0.30.12"
