[package]
name = "ui"
version = "0.1.0"
description = "Native UI module for Open Orpheus"
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = { version = "0.14.3", features = ["source-fontconfig-dlopen"] }
neon = { version = "1.1", features = ["sys"] }
